event_engine/base/c_strmap.h

// ========== Constants ==========

#define STRMAP_OK                0
#define STRMAP_ERR_NOT_FOUND    -3
// ========== Structs ==========

/**
 * @brief A single open-addressing table slot for the string map.
 */
typedef struct strmap_entry {
    const char* key;           /**< Cloned key bytes (owned by the map, NUL-terminated). */
    size_t key_length;         /**< Length of key (excludes NUL). */
    void* value;               /**< Opaque value pointer stored by the caller. */
    uint64_t hash;             /**< Cached hash of key for faster probing/rehash. */
    int occupied;              /**< 1 if slot holds a live entry. */
    int removed;               /**< 1 if slot is a tombstone (keeps probe chains intact). */
    struct strmap_entry* prev; /**< Previous entry in insertion-order list. */
    struct strmap_entry* next; /**< Next entry in insertion-order list. */
} strmap_entry;
/**
 * @brief String-keyed hash map with open addressing and tombstones.
 */
typedef struct strmap {
    heap_allocator* heap_allocator; /**< Optional custom allocator; NULL uses system heap. */
    strmap_entry* table;            /**< Backing array of slots; zeroed on allocation. */
    size_t capacity;                /**< Number of slots in `table`. */
    size_t size;                    /**< Used-slot count since last rehash (live + tombstones). */
    size_t occupied;                /**< Number of live entries. */
    strmap_entry* first;            /**< Head of insertion-order doubly linked list. */
    strmap_entry* last;             /**< Tail of insertion-order doubly linked list. */
    uint64_t salt;                  /**< Per-map hash salt for XXH3. */
} strmap;
// ========== Forward Declarations (Public API) ==========

/**
 * @brief Create a new string-keyed open-addressing hash map.
 *
 * Allocates the `strmap` structure and its backing table. When a custom
 * `heap_allocator` is provided, allocator-managed memory is used (already
 * zero-initialized by the allocator). Otherwise, standard heap is used.
 *
 * @param capacity     Initial capacity hint (rounded up to internal minimums).
 *                     Pass 0 to use DEFAULT_STRMAP_CAPACITY. Values below
 *                     MIN_STRMAP_CAPACITY are clamped up. Values above
 *                     MAX_STRMAP_CAPACITY return NULL.
 * @param heap_allocator Optional allocator; pass NULL to use `calloc/free`.
 * @param with_lock    Non-zero to use the allocator's mutex for allocator
 *                     operations performed inside this call.
 * @return Pointer to a new `strmap` on success; NULL on failure.
 */
static inline strmap* c_strmap_new(size_t capacity, heap_allocator* heap_allocator, int with_lock);
/**
 * @brief Free the map's resources.
 *
 * Frees all cloned keys and the table. If `free_self` is non-zero, also frees
 * the `strmap` struct itself. When a custom `heap_allocator` is used, freeing
 * is performed via that allocator and may be optionally locked via
 * `with_lock`.
 *
 * @param map          Map instance (NULL is a no-op).
 * @param free_self    Non-zero to free the `strmap` object itself.
 * @param with_lock    Non-zero to use the allocator's mutex during frees.
 */
static inline void c_strmap_free(strmap* map, int free_self, int with_lock);
/**
 * @brief Look up a value by key.
 *
 * Performs linear-probing search that correctly traverses tombstones.
 *
 * @param map          Map instance.
 * @param key          NUL-terminated key string.
 * @param key_len      Key length; pass 0 to compute with `strlen`.
 * @param out          Out-parameter for the value on success (must be non-NULL).
 * @return `STRMAP_OK` on success; `STRMAP_ERR_NOT_FOUND` if absent; a negative
 *         error code on invalid arguments.
 */
static inline int c_strmap_get(strmap* map, const char* key, size_t key_len, void** out);
/**
 * @brief Insert or update a key/value pair.
 *
 * Linear-probing with tombstones: scans until an opening to ensure the key
 * does not exist later in the cluster, remembers the first tombstone (if any),
 * and inserts preferentially into the earliest tombstone to reduce probe
 * lengths. Clones and owns the key memory internally.
 *
 * Automatically triggers growth and rehashing when the table becomes too
 * utilized (based on used-slot count, including tombstones).
 *
 * @param map          Map instance.
 * @param key          NUL-terminated key string.
 * @param key_len      Key length; pass 0 to compute with `strlen`.
 * @param value        Value pointer to store (opaque to the map).
 * @param out_entry   Optional out-parameter to receive the strmap_entry pointer.
 * @param with_lock    Non-zero to use the allocator's mutex for allocations.
 * @return `STRMAP_OK` on success; negative error code on invalid args or OOM;
 *         `STRMAP_ERR_FULL` if no slot found (extremely unlikely with growth).
 */
static inline int c_strmap_set(strmap* map, const char* key, size_t key_len, void* value, strmap_entry** out_entry, int with_lock);
/**
 * @brief Remove a key, returning its value if present.
 *
 * Marks the slot as a tombstone (keeps probe-chain integrity) and unlinks the
 * entry from the insertion-order doubly-linked list.
 *
 * @param map          Map instance.
 * @param key          NUL-terminated key string.
 * @param key_len      Key length; pass 0 to compute with `strlen`.
 * @param out          Out-parameter set to the removed value on success; set to
 *                     NULL on not found (when `out` is non-NULL).
 * @param with_lock    Non-zero to use the allocator's mutex for allocations.
 * @return `STRMAP_OK` on success; `STRMAP_ERR_NOT_FOUND` if absent; negative
 *         error code on invalid arguments.
 */
static inline int c_strmap_pop(strmap* map, const char* key, size_t key_len, void** out, int with_lock);
// ========== Public APIs ==========

static inline strmap* c_strmap_new(size_t capacity, heap_allocator* heap_allocator, int with_lock) {
    if (capacity == 0) capacity = DEFAULT_STRMAP_CAPACITY;
    if (capacity < MIN_STRMAP_CAPACITY) capacity = MIN_STRMAP_CAPACITY;
    if (capacity > MAX_STRMAP_CAPACITY) return NULL;

    strmap* map;
    strmap_entry* table;

    if (heap_allocator) {
        pthread_mutex_t* lock = with_lock ? &heap_allocator->lock : NULL;
        map = (strmap*) c_heap_request(heap_allocator, sizeof(strmap), 1, lock);
        if (!map) return NULL;
        map->heap_allocator = heap_allocator;
        table = (strmap_entry*) c_heap_request(heap_allocator, capacity * sizeof(strmap_entry), 1, lock);
        if (!table) {
            c_heap_free((void*) map, lock);
            return NULL;
        }
    }
    else {
        map = (strmap*) calloc(1, sizeof(strmap));
        if (!map) return NULL;
        table = (strmap_entry*) calloc(capacity, sizeof(strmap_entry));
        if (!table) {
            free((void*) map);
            return NULL;
        }
    }
    map->table = table;
    map->capacity = capacity;
    uint64_t seed = (uint64_t) (uintptr_t) map ^ (uint64_t) capacity;
    map->salt = XXH3_64bits(&seed, sizeof(seed)) ^ 0x9E3779B97F4A7C15ULL;
    return map;
}
static inline void c_strmap_free(strmap* map, int free_self, int with_lock) {
    if (!map) return;

    heap_allocator* heap_allocator = map->heap_allocator;
    c_strmap_clear(map, with_lock);

    if (heap_allocator) {
        pthread_mutex_t* lock = with_lock ? &heap_allocator->lock : NULL;
        if (map->table) {
            c_heap_free((void*) map->table, lock);
            map->table = NULL;
        }
        if (free_self) {
            c_heap_free((void*) map, lock);
        }
    }
    else {
        if (map->table) {
            free((void*) map->table);
            map->table = NULL;
        }
        if (free_self) {
            free((void*) map);
        }
    }

    return;
}
static inline int c_strmap_get(strmap* map, const char* key, size_t key_len, void** out) {
    if (!map || !map->table || !key) return STRMAP_ERR_INVALID_BUF;
    if (key_len == 0) key_len = strlen(key);
    if (key_len == 0) return STRMAP_ERR_INVALID_KEY;

    uint64_t hash = c_strmap_hash(map, key, key_len);
    size_t idx = hash % map->capacity;
    size_t start = idx;
    strmap_entry* entry = &map->table[idx];

    while (entry->occupied || entry->removed) {
        if (entry->occupied &&
            entry->key_length == key_len &&
            memcmp(entry->key, key, key_len) == 0) {
            *out = entry->value;
            return STRMAP_OK;
        }
        idx = (idx + 1) % map->capacity;
        entry = &map->table[idx];
        if (idx == start) break;
    }
    return STRMAP_ERR_NOT_FOUND;
}
static inline int c_strmap_set(strmap* map, const char* key, size_t key_len, void* value, strmap_entry** out_entry, int with_lock) {
    if (!map || !key) return STRMAP_ERR_INVALID_BUF;
    if (key_len == 0) key_len = strlen(key);
    if (key_len == 0) return STRMAP_ERR_INVALID_KEY;

    if (map->size * 2 >= map->capacity) {
        size_t new_cap = map->capacity ? map->capacity * 4 : MIN_STRMAP_CAPACITY;
        if (new_cap < map->capacity || new_cap > MAX_STRMAP_CAPACITY) return STRMAP_ERR_INVALID_BUF;
        if (c_strmap_rehash(map, new_cap, with_lock) != STRMAP_OK) return STRMAP_ERR_INVALID_BUF;
    }

    uint64_t hash = c_strmap_hash(map, key, key_len);
    size_t idx = hash % map->capacity;
    size_t start = idx;
    strmap_entry* tombstone = NULL;
    strmap_entry* entry = &map->table[idx];

    while (entry->occupied || entry->removed) {
        if (!entry->occupied && !tombstone) {
            tombstone = entry;
        }
        else if (entry->occupied && entry->key_length == key_len && memcmp(entry->key, key, key_len) == 0) {
            entry->value = value;
            if (out_entry) *out_entry = entry;
            return STRMAP_OK;
        }
        idx = (idx + 1) % map->capacity;
        entry = &map->table[idx];
        if (idx == start) {
            if (!tombstone) return STRMAP_ERR_FULL;
            break;
        }
    }

    if (!tombstone) map->size++;
    entry = tombstone ? tombstone : entry;

    const char* key_copy = c_strmap_clone_key(map, key, key_len, with_lock);
    if (!key_copy) return STRMAP_ERR_INVALID_BUF;

    entry->key = key_copy;
    entry->key_length = key_len;
    entry->value = value;
    entry->hash = hash;
    entry->occupied = 1;
    entry->removed = 0;

    entry->prev = map->last;
    entry->next = NULL;
    if (map->last) {
        map->last->next = entry;
    }
    else {
        map->first = entry;
    }
    map->last = entry;
    map->occupied++;
    if (out_entry) *out_entry = entry;
    return STRMAP_OK;
}
static inline int c_strmap_pop(strmap* map, const char* key, size_t key_len, void** out, int with_lock) {
    if (!map || !key) return STRMAP_ERR_INVALID_BUF;
    if (key_len == 0) key_len = strlen(key);
    if (key_len == 0) return STRMAP_ERR_INVALID_KEY;

    uint64_t hash = c_strmap_hash(map, key, key_len);
    size_t idx = hash % map->capacity;
    size_t start = idx;

    while (1) {
        strmap_entry* entry = &map->table[idx];
        if (!entry->occupied && !entry->removed) break;
        if (entry->occupied &&
            entry->key_length == key_len &&
            memcmp(entry->key, key, key_len) == 0) {
            if (out) *out = entry->value;

            if (entry->prev) entry->prev->next = entry->next;
            else map->first = entry->next;
            if (entry->next) entry->next->prev = entry->prev;
            else map->last = entry->prev;

            c_strmap_free_key(map, entry->key, with_lock);
            memset(entry, 0, sizeof(strmap_entry));
            entry->removed = 1;
            map->occupied--;
            return STRMAP_OK;
        }
        idx = (idx + 1) % map->capacity;
        if (idx == start) break;
    }
    if (out) *out = (void*) NULL;
    return STRMAP_ERR_NOT_FOUND;
}