event_engine/base/c_heap_allocator.h

// ========== Heap Allocator Structs ==========

typedef struct heap_memory_block {
    size_t capacity;
    size_t size;
    struct heap_memory_block* next_free;
    struct heap_memory_block* next_allocated;
    struct heap_page* parent_page;
    char buffer[];
} heap_memory_block;
typedef struct heap_page {
    size_t capacity;
    size_t occupied;
    struct heap_allocator* allocator;
    struct heap_page* prev;
    struct heap_memory_block* allocated;
    char buffer[];
} heap_page;
typedef struct heap_allocator {
    pthread_mutex_t lock;
    size_t mapped_pages;
    struct heap_memory_block* free_list;
    struct heap_page* active_page;
} heap_allocator;
static inline void c_heap_free(void* ptr, pthread_mutex_t* lock) {
    if (!ptr) {
        errno = EINVAL;
        return;
    }

    heap_memory_block* block = (heap_memory_block*) ((char*) ptr - sizeof(heap_memory_block));
    heap_page* page = block->parent_page;
    if (!page || !page->allocator) {
        errno = EINVAL;
        return;
    }

    heap_allocator* allocator = page->allocator;

    uint8_t locked = 0;
    if (lock) {
        int ret = pthread_mutex_lock(lock);
        if (ret != 0) {
            errno = ret;
            return;
        }
        locked = 1;
    }

    block->size = 0;
    block->next_free = allocator->free_list;
    allocator->free_list = block;

    if (locked) pthread_mutex_unlock(lock);
}